[package]
name = "spam-filtering"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
csv = "1.3.1"
rand = "0.9.0"
regex = "1.11.1"
rust-stemmers = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
stop-words = { version = "0.8.1", features = ["nltk"] }
tokenizers = { version = "0.21.0", features = ["http"] }
